--- a/Webinar2/style.css
+++ b/Webinar2/style.css
@@ -82,3 +82,11 @@
   .button:active {
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.3);
   }
+
+  .error {
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      font-size: 12px;
+      color: red;
+  }
